update jenkins